<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.amb01.myapplication0323.NotificationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/my_notification_layout"
        android:orientation="vertical">

        <Button
            android:id="@+id/F"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_back_to_main_activity" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo" />

        <EditText
            android:id="@+id/my_notification_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TimePicker
            android:id="@+id/my_notification_timePicker"
            android:layout_width="match_parent"
            android:layout_height="349dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/my_notification_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/set" />

            <Button
                android:id="@+id/my_notification_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/disolve" />
        </LinearLayout>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>
